--- a/assets/sass/3-modules/_posts.sass
+++ b/assets/sass/3-modules/_posts.sass
@@ -19,6 +19,7 @@ div.post
 			max-height: 70px
 			display: inline
 			float: left
+			object-fit: cover
 			@extend .thumbnail
 			margin: 0 10px 20px 0px
 		h5
@@ -50,7 +51,7 @@ div.post
 		margin-bottom: 10px
 		a
 			color: $primary
-			margin: 0 10px
+			margin: 0 0 0 20px
 			cursor: pointer
 			&.upvote
 				@include icon("thumbs-o-up")
@@ -63,8 +64,9 @@ div.post
 				text-decoration: none
 				span
 					text-decoration: none
-			span
-				color: $secondary
+		span
+			color: $secondary
+
 
 
 	div.post-comment-section
@@ -82,7 +84,7 @@ div.post
 				img
 					position: absolute
 					max-width: 50px
-
+					object-fit: cover
 					//max-height: 50px
 					display: inline
 					//float: left
@@ -124,7 +126,7 @@ div.post
 				margin-bottom: 10px
 				a
 					color: $primary
-					margin: 0 10px
+					margin: 0 0 0 20px
 					cursor: pointer
 					&.upvote
 						@include icon("thumbs-o-up")
@@ -137,8 +139,9 @@ div.post
 						text-decoration: none
 						span
 							text-decoration: none
-					span
-						color: $secondary
+				span
+					color: $secondary
+
 				
 			div.comment-reply-section
 				padding: 0px
@@ -157,6 +160,7 @@ div.post
 							position: absolute
 							max-width: 40px
 							display: inline
+							object-fit: cover
 							@extend .thumbnail
 							margin: 0 10px 20px -50px
 
@@ -185,7 +189,7 @@ div.post
 
 						a
 							color: $primary
-							margin: 0 10px
+							margin: 0 0 0 20px
 							cursor: pointer
 							&.upvote
 								@include icon("thumbs-o-up")
@@ -198,8 +202,9 @@ div.post
 								text-decoration: none
 								span
 									text-decoration: none
-							span
-								color: $secondary
+						span
+							color: $secondary
+
 
 					div.reply-info
 
@@ -207,8 +212,52 @@ div.post
 
 						span.reply-timestamp
 
+				
 						span.reply-upvotes
 
+						
+				div.comment-new-reply
+					background-color: white
+					display: flex
+					border-radius: 10px
+					img
+						width: 40px
+						height: 40px
+						margin: 10px 10px 20px 10px
+						object-fit: cover
+					textarea
+						height: 1cm
+						margin: 10px
+						flex-grow: 1
+						border-radius: 5px
+						border: solid 2px rgba($primary,0.3)
+						outline: none
+						resize: none
+						transition: all 0.2s ease-in-out
+						padding: 5px
+						&:focus
+							box-shadow: 0px 0px 20px 0px rgba($primary,0.5)
+
+
+					input
+						width: 80px
+						padding: 10px
+						margin: 20px 10px 10px 10px
+						line-height: 0.5
+						height: 25px
+						color: $lightestgrey
+						background-color: lighten($primary,10%)
+						font-weight: 300
+						border-radius: 5px
+						transition: all 0.2s ease-in-out
+
+						&:hover
+							transform: scale(1.1)
+							background-color: $primary
+							box-shadow: 0px 0px 14px 0px rgba($primary,1)
+							color: white
+
+		
 		div.post-new-comment
 			background-color: $lightestgrey
 			border-radius: 10px
@@ -219,6 +268,7 @@ div.post
 				max-width: 50px
 				max-height: 50px
 				margin: 10px 10px 20px 10px
+				object-fit: cover
 
 			textarea
 				height: 1cm
@@ -227,8 +277,9 @@ div.post
 				flex-grow: 1
 				outline: none
 				resize: none
+				border: solid 2px rgba($primary,0.3)
 				transition: all 0.2s ease-in-out
-				border: none
+				//border: none
 				padding: 5px
 
 				&:focus
